# beautylog

./: CMakeLists.txt
include/beautylog/: beautylog.hpp  fmt_helper.hpp
src/: beautylog.cpp
